--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <!--  search section -->
         <div> 
-            
+
         </div>
-        <div id="card-container" class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4"> 
+        <div id="card-container" class=" ml-0  grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4"> 
             <!-- <div class="card card-compact w-96 bg-base-100 shadow-xl">
                 <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
                 <div class="card-body">
